# fieldrun

./: .gitignore  ABLATION_FINDINGS.md  AGENTS.md  CERTIFIED_QUANT_PROPOSAL.md  Cargo.toml  DENSITY_BUCKETING.md  FINDINGS.md  FINDINGS_PYTHIA.md  FINDINGS_ROUTER_ORACLE.md  FORMAT.md  HYBRID.md  JLENS.md  LOGIC_EXPORT.md  PIC_PROPOSAL.md  PROVABLE_OPT_PROPOSAL.md  QUICKSTART.md  README.md  RULE_EXTRACTION_PROPOSAL.md  SOUFFLE.md  SWEEP_RESULTS.md  TROPICAL_PROPOSAL.md  TURBOQUANT.md  holdout_qwen.json  holdout_qwen_big.json  threx-x-article.md
.github/workflows/: ci.yml  pages.yml
docs/: index.html  intuition.html
experiments/certified_prune_step0/: QUANT_SWEEP.txt  README.md  RESULTS.txt  SWEEP.txt  coder05_science.jsonl  qwen05_code.jsonl  qwen05_science.jsonl  qwen7b_science.jsonl  step0.py  step0_quant.py  step0_sweep.py
experiments/certified_quant/: README.md  RESULTS.txt  RESULTS_EMBED.txt  alloc_science.json  calib_embed_science.jsonl  step1_5_embed.py  step1_allocate.py  step2_angular.RESULTS.txt  step2_angular.py
experiments/discovery/: .gitignore  README.md  collect.sh  collect_causal.sh  collect_dla.sh  corpus.txt  corpus_enrich.txt  corpus_gemma.txt  discover.py  discover_causal.py  discover_dla.py  fuse.py
experiments/e4b_smoke/: sentences.jsonl
experiments/gemma4/: RESULTS.txt  compare.py  make_tiny_gemma4.py
experiments/jlens/: fit_corpus.txt  mkcorpus.py  run_ladder.sh
experiments/jlens/ladder/: pythia-14m.jlens  pythia-14m.meta.json  pythia-160m.meta.json  pythia-410m.meta.json  pythia-70m.meta.json
experiments/qwen3next/: README.md  compare.py  crosscheck_deltanet.py  deltanet_ref.py  full_attn_golden.py  make_tiny_qwen3next.py  qwen35moe_parity.RESULTS.txt
experiments/rule_synth/: PIC_LOSSINESS.md  README.md  RESULTS.md  align.py  align_nat.py  emit_datalog.py  gram_probe.py  pic_residue.py  sample_corpus.txt  scope_report.py  synth.py  tree_synth.py
experiments/value_probe/: train_probe.py
lo3a/: .gitignore  README.md  bench.sh  bpe.py  bundle_io.py  demand_closure.py  grammar_recall.py  info_rank.py  lo1_circuit.py  lo1_curve.py  lo1_ladder.py  lo1_localize.py  lo1_matrix.py  lo1_poly.py  lo1_readout.py  lo1_scale.py  lo1_span.py  lo1_spec_compare.py  lo1_spectrum.py  magic_residual.py  mint_and_emit.py  pr_core.py  pr_core_export.py  pr_core_gate.py  pr_core_residual_gate.py  pr_core_spec.py  pr_core_v2.py  pythia_grok.py  real_cert_numbers.py  real_recall.py  reduce.py  run_smollm.py  tau_star_budget.py  tau_star_powered.py  tau_star_table.py  tau_star_trained.py  tau_star_trained_table.py  tau_star_xarch.py  test_demand_closure.py  to_safetensors.py  (+6 more)
scripts/: analyze_e0_split.py  bench.sh  bert_ref.py  bucket_sweep.sh  build_site.py  build_store.py  classify_tree.py  export_logic_smoke.sh  gemma3_ref.py  make_ablation_evals.py  make_corpora.py  make_holdout_qwen.py  make_monster_corpus.py  neox_ref.py  perf.sh  requirements.txt  tree_to_xlsx.py  validate_all.sh
sim/: README.md  build_page.py  capture.py  engine.js  engine_probe.js  page_template.html  threx.py  train.py
sim/data/: holdout.json  store.json  validation.json  weights.json
site/: intuition.html  slides.json  template.html
src/: api.rs  bert.rs  bucketing.rs  bundle.rs  composition.rs  convert.rs  deltanet.rs  device.rs  dsv4.rs  explain.rs  gemma.rs  gemma3.rs  gemma4.rs  gpu_gpt2.rs  gpu_mm.rs  gpu_rope.rs  headgate.rs  hub.rs  jit.rs  jlens.rs  lib.rs  logic.rs  logic_whole.rs  main.rs  mdfmt.rs  minimax.rs  mla.rs  model.rs  neox.rs  qwen35moe.rs  qwen3moe.rs  recursion_dl.rs  recursion_probe.rs  retrieval.rs  rope.rs  ternary.rs  tools.rs  tropical.rs  turboquant.rs
sweeps/: summary.tsv
sweeps/corpora/: code.json  english.json  german.json  math.json  pooled_big.json  pooled_diverse.json  pooled_small.json  spanish.json
