[package]
name = "fieldrun"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"   # default + `--features gpu` both build on stable 1.82 (deps pinned in Cargo.lock); older -> `rustup update`
description = "Run a decompiled LLM as a single native binary — the three pylm tiers (retrieval / composition / router) in pure Rust, no framework at runtime."
license = "Apache-2.0"

[features]
# opt-in GPU backend (wgpu: Metal on Mac, DX12 on Windows incl. ARM, Vulkan on Linux). The default build is pure-CPU,
# no GPU dependency — the CPU path stays the faithful reference; GPU is an accelerator for usable generation speed.
gpu = ["dep:wgpu", "dep:pollster"]
# opt-in AVX-512 VNNI int8 kernel (x86-64 only, needs NIGHTLY Rust — the avx512 intrinsics + target_feature are still
# unstable on stable). Default build omits it and uses a portable scalar int8 dot, so it compiles on stable everywhere
# (incl. Apple Silicon / Intel macOS). Enable on an x86 server with nightly: `cargo +nightly build --release --features vnni`.
vnni = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.16"
rayon = "1"   # data-parallel scoring: independent forward passes fan out across cores
half = "2"    # f16 weights kept low-precision in RAM (the in-RAM-precision path), upcast per matmul
tiny_http = "0.12"   # minimal blocking HTTP server for the /predict /generate /explain API
safetensors = "0.4"  # read HF weights directly (pure Rust, no torch) for the `convert` subcommand
memmap2 = "0.9"      # mmap the safetensors so convert streams one tensor at a time (RAM ≈ one tensor)
wgpu = { version = "22", optional = true }       # cross-platform GPU backend (opt-in, --features gpu)
pollster = { version = "0.3", optional = true }  # block on wgpu's async adapter/device requests

[[bin]]
name = "fieldrun"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
