[package]
name = "fieldrun"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"   # default + `--features gpu` both build on stable 1.82 (deps pinned in Cargo.lock); older -> `rustup update`
description = "Run a decompiled LLM as a single native binary — the three pylm tiers (retrieval / composition / router) in pure Rust, no framework at runtime."
license = "Apache-2.0"

[features]
# `hub` (HF pull) and `api` (OpenAI/Anthropic endpoints + `--chat`) are ON by default — convert-by-repo-id and chat
# work out of the box. For a lean, offline, token-id-only binary, build with `--no-default-features`.
default = ["hub", "api"]
# opt-in GPU backend (wgpu: Metal on Mac, DX12 on Windows incl. ARM, Vulkan on Linux). The default build is pure-CPU,
# no GPU dependency — the CPU path stays the faithful reference; GPU is an accelerator for usable generation speed.
gpu = ["dep:wgpu", "dep:pollster"]
# (The int8 dot uses NEON `sdot` on aarch64 — stable, auto-detected at runtime — with a scalar fallback everywhere
# else; no feature flag or nightly needed. The old AVX-512 VNNI path was dropped: it required nightly on stable Rust.)
# opt-in tuned BLAS for the f32/f16 matmuls — a big speedup for dense models on CPU (the int8 path keeps its own
# kernel). Routes ndarray's `.dot()` through the system cblas (`cblas_sgemm`). Pick ONE backend:
#   accelerate → macOS, links Apple's Accelerate framework (provides cblas, no install);
#   openblas   → Linux/other, links libopenblas (install it: e.g. `apt install libopenblas-dev`).
# The pure-Rust default build is unchanged (this is off by default and the CPU matmul stays the faithful reference).
blas = ["ndarray/blas", "dep:blas-src"]
accelerate = ["blas", "blas-src/accelerate"]
openblas = ["blas", "blas-src/openblas"]
# HF hub pull (default): `convert --model org/repo` fetches config + safetensors from Hugging Face over a small ureq
# client (no torch, no async); auth via `huggingface-cli login` / $HF_TOKEN for gated models. `--no-default-features`
# drops it for a fully offline / network-free binary.
hub = ["dep:ureq"]
# opt-in OpenAI- + Anthropic-compatible HTTP endpoints (text in/out) + the `--chat` REPL. Pulls in a tokenizer
# (`tokenizers`) and `rustyline` (line editing + history + tab-completion of slash commands). On by default; build
# `--no-default-features` for the lean token-id-only binary.
api = ["dep:tokenizers", "dep:rustyline"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.16"
rayon = "1"   # data-parallel scoring: independent forward passes fan out across cores
half = "2"    # f16 weights kept low-precision in RAM (the in-RAM-precision path), upcast per matmul
tiny_http = "0.12"   # minimal blocking HTTP server for the /predict /generate /explain API
safetensors = "0.4"  # read HF weights directly (pure Rust, no torch) for the `convert` subcommand
memmap2 = "0.9"      # mmap the safetensors so convert streams one tensor at a time (RAM ≈ one tensor)
wgpu = { version = "22", optional = true }       # cross-platform GPU backend (opt-in, --features gpu)
pollster = { version = "0.3", optional = true }  # block on wgpu's async adapter/device requests
# opt-in BLAS backend (--features accelerate|openblas|blis); routes ndarray GEMM through cblas. Default build omits it.
blas-src = { version = "0.10", optional = true, default-features = false }
# HF hub pull (default feature `hub`): blocking ureq client, no async/tokio. ureq's default TLS is rustls (pure-Rust,
# no system OpenSSL/SecureTransport needed, same on Mac + Linux). We download by repo id ourselves — ureq follows HF's
# relative 307 redirects (which hf-hub 0.3 did not) — and read the standard HF token; no login of our own.
ureq = { version = "=2.9.7", optional = true }
# onig (a small C regex lib) is required by tokenizers 0.20 — needs a C compiler at build (present in any Rust dev
# setup: Xcode CLT on macOS, build-essential on Linux). It's only pulled by the default `api` feature.
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
# REPL line editing + history + tab-completion for `--chat` (only pulled by the `api` feature). default-features off to
# skip the on-disk history file (fd-lock etc.) — in-memory history + completion are core, so this stays lean + 1.82-safe.
rustyline = { version = "14", optional = true, default-features = false }

[[bin]]
name = "fieldrun"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
